# sg_server

./: .gitignore
branches/20180201/: 1_svn_up.bat  Makefile.am  env_uninstall.sh  global_server_new.xml  server_new.xml
branches/20180201/chat_server/: Makefile.am
branches/20180201/common/: ContainerParse.h  DataManager.cpp  DataManager.h  Entry.cpp  MyTuple.h  Noncopyable.h  ScriptProxy.cpp  Singleton.h  StringTool.cpp  TblxFileHead.cpp  TblxFileHead.h  VarType.h  common_struct.hpp  config_mgr.h  csv.cpp  exception.hpp  func_time.cpp  func_time.hpp  global_id.cpp  global_id.hpp  http_request.hpp  log.cpp  log.hpp  macros.hpp  msg_reply_code.hpp  proto_log.cpp  random_util.hpp  random_uuid.cpp  redis_client.hpp  threshold_check.cpp  time_manager.cpp  xml_define.hpp  zdb_ex.hpp
branches/20180201/cross_server/: config.xml
branches/20180201/db_save/: Makefile.am
branches/20180201/game_server/: Makefile.am
branches/20180201/gate_server/: Makefile.am
branches/20180201/login_server/: Makefile.am
branches/20180201/network/: acceptor.cpp  acceptor.hpp  connector.cpp  connector.hpp  io_base.cpp  message.cpp  message.hpp  msg_count.cpp  msg_count.hpp  msg_handler.hpp  tcp_socket.hpp
branches/20180201/proto/: common.proto  log.proto
branches/20180201/protocpp/: Garrison.pb.h  Makefile.am
branches/20180201/sql/: config_new.py  sg_account.sql  sg_bbs.sql  sg_game.sql  sg_glog.sql  sg_log.sql  sg_statistics.sql  sg_up.sql
branches/20180201/tblh/: ArenaWeekAwardTable.tbls.h  Bounty.tbls.h  BuffSmallType.tbls.h  BuffTable.tbls.h  BuyPermission.tbls.h  CDKeyTable.tbls.h  City.tbls.h  Comprehensive.tbls.h  DropTable.tbls.h  DropWorldTable.tbls.h  EquipAttrScore.tbls.h  EquipExattr.tbls.h  EquipExattrMake.tbls.h  EquipSmelt.tbls.h  ExpeditionBox.tbls.h  ExpeditionShop.tbls.h  FamilyOfficial.tbls.h  FamilyPray.tbls.h  FemaleNameTable.tbls.h  FightAgainst.tbls.h  HeroFateLv.tbls.h  HeroGet.tbls.h  HeroGrade.tbls.h  HeroJobTransfer.tbls.h  HeroStar.tbls.h  HeroTalent.tbls.h  Item.tbls.h  LabelTable.tbls.h  LevelDemad.tbls.h  LifeStar.tbls.h  LifeState.tbls.h  Liveness.tbls.h  Luckydraw.tbls.h  LuckydrawSeq.tbls.h  MailTable.tbls.h  MapTable.tbls.h  MoneyTreeReward.tbls.h  MoneyTreeShake.tbls.h  MountTable.tbls.h  OfflineArenaAward.tbls.h  (+28 more)
trunk/center_server/: Makefile  Makefile.am  Makefile.in
trunk/center_server/cdkey/: cdkey_manager.hpp
trunk/center_server/challenge/: challenge_manager.cpp  challenge_msg_handle.cpp
trunk/center_server/chat/: chat_listener.cpp  chat_listener.hpp  chat_msg_handler.cpp
trunk/center_server/city/: city_manager.cpp
trunk/center_server/country/: country.hpp  country_mgr.cpp
trunk/center_server/db/: db_connector.hpp
trunk/center_server/family/: family.cpp  family.hpp  family_manager.hpp  family_member.cpp  family_msg_handle.cpp  family_shop.cpp  family_shop.hpp
trunk/center_server/field_boss/: field_boss.hpp  field_boss_manager.cpp  field_boss_manager.hpp
trunk/center_server/friend/: friend_manager.cpp  friend_manager.hpp  friend_msg_handle.cpp
trunk/center_server/game/: game_listener.hpp  game_manager.cpp  game_msg_handler.hpp
trunk/center_server/gate/: gate_listener.hpp  gate_manager.cpp
trunk/center_server/general_event/: general_event_manager.cpp  general_event_msg_handler.hpp  general_info_manager.cpp
trunk/center_server/gm/: gm_func.hpp  gm_listener.hpp  gm_msg_handler.cpp  gm_msg_handler.hpp
trunk/center_server/goods/: goods.hpp  goods_manager.cpp  goods_msg_handle.cpp  goods_msg_handle.hpp
trunk/center_server/item/: item_limit.cpp  item_manager.cpp
trunk/center_server/log/: log_connector.hpp  log_wrapper.cpp  log_wrapper.hpp
trunk/center_server/look_role_info/: simple_data_msg_handle.cpp  simple_data_msg_handle.hpp
trunk/center_server/luckydraw/: luckydraw_mgr.cpp  luckydraw_msg_handle.cpp
trunk/center_server/mail/: global_mail_manager.cpp  global_mail_manager.hpp  mail_common.hpp  mail_manager.cpp  mail_manager.hpp  mail_msg_handle.cpp  mail_user_data.hpp
trunk/center_server/main/: center_server.cpp  center_server.hpp  main.cpp
trunk/center_server/offline/: offline_role.cpp  offline_role_manager.cpp
trunk/center_server/offline_arena/: offline_arena_manager.cpp  offline_arena_manager.hpp  offline_arena_msg_handle.hpp  offline_arena_record.hpp
trunk/center_server/offline_fight/: offline_fight_manager.hpp  offline_fight_msg_handle.hpp
trunk/center_server/offline_friend_msg_mgr/: offline_friend_msg_mgr.hpp
trunk/center_server/rank/: rank_achieve.hpp  rank_charm.hpp  rank_copper.cpp  rank_family.hpp  rank_gold.hpp  rank_level.cpp  rank_manager.hpp  rank_power.cpp  rank_recruit.cpp  rank_recruit.hpp  rank_sort.cpp  rank_tower.cpp  rank_tower.hpp
trunk/center_server/red_point/: red_point_manager.cpp
trunk/center_server/redbag/: redbag.cpp  redbag_manager.cpp  redbag_manager.hpp  redbag_msg_handle.hpp
trunk/center_server/redis/: country_data_mgr.cpp  country_data_mgr.hpp  family_data_mgr.cpp  friend_data_mgr.hpp  mail_data_mgr.cpp  mail_data_mgr.hpp  (+1 more)
trunk/chat_server/: Makefile  Makefile.am  Makefile.in
trunk/common/: DataManager.cpp  Entry.h  Lock.h  LuaState.h  Makefile  Makefile.am  Makefile.in  StringTool.h  assert.hpp  cache_key.hpp  common_struct.hpp  config_mgr.cpp  config_mgr.h  csv.hpp  exception.cpp  global_id.hpp  http_request_parser.hpp  log.hpp  md5.cpp  random_util.hpp  random_uuid.hpp  rank.hpp  redis_cli.cpp  redis_cli.hpp  redis_client.hpp  redis_client_back.cpp  redis_client_back.hpp  redis_unit.hpp  server_base.hpp  timer_common.hpp  utility.cpp  utility.hpp
trunk/db_server/: Makefile  Makefile.am  Makefile.in
trunk/game_server/: Makefile  Makefile.am  Makefile.in
trunk/gate_server/: Makefile  Makefile.am  Makefile.in  config.xml
trunk/network/: ByteBuffer.cpp  Makefile  Makefile.am  Makefile.in  acceptor.cpp  acceptor.hpp  command.hpp  connector.hpp  list.hpp  message.hpp  msg_handler.hpp  network.cpp  network.hpp  tcp_socket.hpp
trunk/tbl_reader/: Makefile.am  main.cpp  tbl_reader.cpp
trunk/transfer_server/: Makefile  Makefile.am  Makefile.in  config.xml
(+1102 files in other folders)
